# diffusion_in_1D

./: CMakeLists.txt  README.md
docs/: docs.tex
include/: bar.h  galaxy.h  units.h
plots/: plot_solution.py
src/: galaxy.cpp  main.cpp
